@@ -128,11 +128,12 @@ namespace Banter
 
 			if (is_default) {
 				DefaultResponse = response;
-				button.AddAccelerator ("activate",
+/*				button.AddAccelerator ("activate",
 						       accel_group,
 						       (uint) Gdk.Key.Escape, 
 						       0,
 						       Gtk.AccelFlags.Visible);
+*/
 			}
 		}
 		
